[metadata]

name = anvil
version = attr: anvil.__version__.__version__
description = A Minecraft bedrock content development framework.
long_description = file: README.rst

author = Yasser A. Benfoughal
author_email = yasser@starktma.net
url = https://github.com/StarkTMA/Anvil

license = GNU GPLv3
license_files = LICENSE

platforms = Windows

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities

project_urls =
    Github = https://github.com/StarkTMA/Anvil
    Website = https://starktma.net
    Twitter = https://twitter.com/StarkTMA_

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
package_dir = 
    =src
install_requires =
    commentjson
    click
    numpy
    pillow
    scipy
    pygithub
    deep_translator


[options.packages.find]
where = src
exclude =
    docs*

[options.entry_points]
console_scripts =
    anvil = anvil.cli:cli