[metadata]

name = mcanvil
version = attr: anvil.__version__.__version__
description = A Minecraft bedrock content development framework.
long_description = file: README.md
long_description_content_type = text/markdown

author = Yasser A. Benfoughal
author_email = yasser@starktma.net
url = https://anvil.starktma.net/

license = GNU GPLv3
license_files = LICENSE

platforms = Windows

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
    Programming Language :: Python
    Programming Language :: Python :: 3.13
    Topic :: Utilities

project_urls =
    Github = https://github.com/StarkTMA/Anvil
    Website = https://anvil.starktma.net
    Twitter = https://twitter.com/StarkTMA_

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.13
package_dir = 
    =src
install_requires =
    click
    click_aliases
    pillow
    deep_translator
    reportlab
    packaging
    orjson
    commentjson

[options.packages.find]
where = src
exclude =
    docs*

[options.package_data]
anvil =
    templates/*

[options.entry_points]
console_scripts =
    anvil = anvil.cli:cli

[options.extras_require]
test =
    pytest
ldtk =
    amulet-core